[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://Scripts/world.gd" type="Script" id=2]
[ext_resource path="res://Scenes/dungeonGenerator.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PlayerScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/InputManager.tscn" type="PackedScene" id=5]

[node name="Node" type="Node"]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
drag_margin_left = 0.05
drag_margin_top = 0.05
drag_margin_right = 0.05
drag_margin_bottom = 0.05
script = ExtResource( 1 )

[node name="world" type="Navigation2D" parent="."]
script = ExtResource( 2 )

[node name="dungeonGenerator" parent="world" instance=ExtResource( 3 )]

[node name="enemies" type="Node" parent="world"]

[node name="Player1" parent="world" instance=ExtResource( 4 )]

[node name="Player2" parent="world" instance=ExtResource( 4 )]

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="InputController" parent="." instance=ExtResource( 5 )]
